<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:ignore="ExtraText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/yor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/your_name"
            android:textSize="@dimen/t_size"
            android:inputType="textPersonName"
            tools:ignore="SpUsage">
        </EditText>

        <EditText
            android:id="@+id/yor_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:textSize="@dimen/t_size"
            android:inputType="textPersonName"
            tools:ignore="SpUsage">
        </EditText>
        <EditText
            android:id="@+id/your_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:textSize="@dimen/t_size"
            android:inputType="number"
            tools:ignore="SpUsage">
        </EditText>
        <EditText
            android:id="@+id/you_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="@dimen/t_size"
            tools:ignore="SpUsage">
        </EditText>


    </LinearLayout>

    //Первый ряд клавиатуры


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/butt_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/return_data" />


    </LinearLayout>
</LinearLayout>